fixed scrollbar issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,9 @@
 
   @layer components{
     .screen-full{
-      overflow-y: overlay;
+      overflow-y: scroll;
       height: 100vh;
+      padding-bottom: 100px;
     }
   }
 
